fix white bottom spacing in comments

--- a/new/develop/style.scss
+++ b/new/develop/style.scss
@@ -493,6 +493,12 @@ li.slick-active {
 	width: 100%;
 	height: 582px;
 	display: none;
+	@media (max-width: 1600px) {
+		height: auto;
+		section {
+			padding-bottom: 0;
+		}
+	}
 }
 section{
 	width: 25%;
